# enkit

./: .bazel_fix_commands.json  .bazelignore  .bazelrc  .gcloudignore  .gitattributes  .gitignore  .terraform.lock.hcl  BUILD.bazel  CODEOWNERS  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  cc.clang-format  cloudbuild.sh  cloudbuild.tf  foobar  gee  go.mod  go.sum  go_repositories.bzl  org_golang_google_grpc.patch  package-lock.json  package.json  pnpm-lock.yaml  prbody.4bftrC.txt  presubmit.textproto  requirements.in  requirements.txt  run_affected.sh  run_dlv.sh  tsconfig.json
allocation_manager/client/: BUILD.bazel  client.go
allocation_manager/proto/: BUILD.bazel  allocation_manager.proto  config.proto  empty.go
allocation_manager/server/: BUILD.bazel  README.md  allocation_manager_config.textproto  example.md  main.go  run.sh
allocation_manager/service/: BUILD.bazel  host_info.py  query.go  query_test.go  queue.go  queue_test.go  service.go  service_test.go  unit.go  unit_test.go
allocation_manager/topology/: BUILD.bazel  config.go  config_test.go
astore/: BUILD.bazel  cobra.go  cobra_test.go  e2e_test.go  server_test.go
astore/astore_test/: BUILD.bazel  e2e_test.go  server_test.go
astore/atesting/: BUILD.bazel  mocks.go
astore/client/: BUILD.bazel  index.yaml  main.go
astore/common/: BUILD.bazel  common.go
astore/proto/: BUILD.bazel
astore/rpc/: BUILD.bazel  astore.proto  auth.proto
astore/server/: BUILD.bazel  README.md  main.go
astore/testdata/: README.md  example.yaml
bb_reporter/: BUILD.bazel  main.go
bb_reporter/reporter/: BUILD.bazel  bigquery.go  service.go
bes_publisher/: BUILD.bazel  main.go
bes_publisher/buildevent/: BUILD.bazel  errslice.go  mockpubsub_test.go  mockstream_test.go  pubsub.go  service.go  service_test.go
build_nark/: BUILD.bazel  main.go  main_test.go
e2e/: BUILD.bazel  e2e.go
enauth/: BUILD.bazel  plugins.go
enauth/plugins/: BUILD.bazel  api.go  googlegroups.go
enauth/rpc/: BUILD.bazel  auth.proto
enkit/: BUILD.bazel  __init__.py  main.go
enkit/cmd/: BUILD.bazel  command.go
enkit/doc_gen/: BUILD.bazel  main.go
enkit/machinecert/: BUILD.bazel  commands.go  install.go
enkit/outputs/: BUILD.bazel  commands.go
enkit/proto/: BUILD.bazel  empty.go  presubmit.proto
enkit/version/: BUILD.bazel  features.go  version.go
faketree/: BUILD.bazel  README.md  faketree.go  faketree_test.go  faketree_test.sh
faketree/exec/: BUILD.bazel  exec.go  exec_test.go
gee/: BUILD.bazel  CONTRIBUTING  README.md  foo.py  gee.py  gee_test.py  geerc.default  main.go  test.gee.rc  test_gee.sh
gee/cmd/: BUILD.bazel  bashSetup.go  cleanup.go  commit.go  config.go  createSshKey.go  debug.go  diff.go  fix.go  gcd.go  getParent.go  hello.go  init.go  log.go  lsbranches.go  makeBranch.go  pack.go  prCheck.go  prCheckout.go  prEdit.go  prList.go  prMake.go  prSubmit.go  prView.go  removeBranch.go  repair.go  revert.go  root.go  rupdate.go  setParent.go  share.go  unpack.go  updateAll.go  upgrade.go  version.go  whatsout.go
gee/commands/: BUILD.bazel  commands.go  example.go
gee/lib/: BUILD.bazel  config.go  gee_core.go  git_utils.go  logging.go  runner.go
ghinviter/: BUILD.bazel  IDEA  main.go
ghinviter/assets/: BUILD.bazel  empty.go  index.html  ui
ghinviter/credentials/: BUILD.bazel  README.md  empty.go
ghinviter/inviter/: BUILD.bazel  inviter.go
ghinviter/proto/: BUILD.bazel  user.proto
ghinviter/ui/: BUILD.bazel  client.ts  empty.go  main.tsx  stepper.tsx  tsconfig.json
kbuild/: BUILD.bazel  README.md  main.go
kbuild/assets/: BUILD.bazel  empty.go  install.sh  watch.yaml
kbuild/common/: BUILD.bazel  decoder.go  kversion.go  watch.go
kbuild/kapt/: BUILD.bazel  controlurl.go  paragraph.go  repository.go
kbuild/utils/: README.md  buildroot_2020.11.2-Add-scripts-and-config-for-kunit-rootfs-image.patch  generate_custom_archive.sh  release-kernel.sh
kbuild/v2/: .gitignore  BUILD.bazel  README.adoc  archive-bazel.sh  archive-deb.sh  archive.sh  build.sh  install-template.sh  kpub-astore  sample-runner.sh  upload.sh
machinist/: BUILD.bazel  README.md  client.go  client_test.go  command.go  commands.go  flags.go  invitations.go  machinist_e2e_test.go  node.go  reserve_test.go  server.go  server_test.go  upload_download_test.go
machinist/client/: BUILD.bazel  main.go
machinist/cmd/: BUILD.bazel  main.go
machinist/config/: BUILD.bazel  common.go  machine.go  node.go
machinist/machine/: BUILD.bazel  commands.go  factory.go  node.go  templates.go  templates_test.go
machinist/mclient/: BUILD.bazel  README.md  main.go
machinist/mnode/: BUILD.bazel  auth.go  commands.go  config.go  config_test.go  factory.go  flags.go  mnode.go  templates.go  templates_test.go
machinist/mserver/: BUILD.bazel  command.go  config.go  controller.go  factory.go  flags.go  models.go  mserver.go  server.go
machinist/node/: BUILD.bazel  commands.go  config.go  config_test.go  factory.go  mnode.go  templates.go  templates_test.go
machinist/polling/: BUILD.bazel  keepalive.go  metrics.go  push.go  register.go
machinist/rpc/: BUILD.bazel  actions.proto  machinist.proto
machinist/server/: BUILD.bazel  main.go
machinist/state/: BUILD.bazel  controlplane.go  controlplane_test.go  userplane.go
machinist/testing/: BUILD.bazel  machinist_e2e_test.go  stress_e2e_test.go
manager/: BUILD.bazel  run.sh
manager/client/: main.go  (+1 more)
mdfmt/: BUILD.bazel  README.md  mdfmt.bzl  mdfmt.py
monitor/: BUILD.bazel  docker-compose.yml  main.go  probes.toml
proxy/: BUILD.bazel  LICENSE  build.go  build_test.go  main.go  proxy.go
pygee/: BUILD.bazel  pygee.py  version.py
scripts/: BUILD.bazel  README.md  bkup  gee  gee.bats  gee.changelog.md  gee.md  gee.orig  gee.rej  gee_aliases.bash  gee_manpage.html  gee_test.sh  git_recover_stash  manifest.yaml  run_dlv.sh
stackdriver_bridge/: BUILD.bazel  config_example.jsonnet  main.go
staco/: BUILD.bazel  README.md  main.go
testbin/: BUILD.bazel  main.go
ui/: BUILD.bazel  README.md  babel.config.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
(+1167 files in other folders)
