load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:exclude e2e_test.go
go_test(
    name = "go_default_test",
    srcs = [
        "cobra_test.go",
        "server_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//astore/atesting:go_default_library",
        "//astore/rpc:astore-go",
        "//astore/server/astore:go_default_library",
        "//lib/srand:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
    ],
)

go_test(
    name = "e2e_test",
    srcs = ["e2e_test.go"],
    data = glob(["testdata/**"]),
    local = True,
    tags = ["manual"],
    deps = [
        "//astore/atesting:go_default_library",
        "//astore/client/astore:go_default_library",
        "//astore/rpc:astore-go",
        "//astore/server/astore:go_default_library",
        "//lib/client/ccontext:go_default_library",
        "//lib/logger:go_default_library",
        "//lib/progress:go_default_library",
        "//lib/srand:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["cobra.go"],
    importpath = "github.com/enfabrica/enkit/astore",
    visibility = ["//visibility:public"],
    deps = [
        "//astore/client/astore:go_default_library",
        "//astore/rpc:astore-go",
        "//lib/client:go_default_library",
        "//lib/knetwork:go_default_library",
        "//lib/progress:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
