load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "e2e_test.go",
        "server_test.go",
    ],
    data = glob(["testdata/**"]),
    tags = [
        # This test spins up emulated Datastore and therefore probably shouldn't
        # run on Buildbarn.
        "manual",
        "no-remote",
        # TODO(INFRA-1233): This test can't run in the dev container until we
        # install its dependencies (Datastore emulator)
        "no-cloudbuild",
    ],
    deps = [
        "//astore/atesting:go_default_library",
        "//astore/client/astore:go_default_library",
        "//astore/rpc/astore:go_default_library",
        "//astore/server/astore:go_default_library",
        "//lib/client/ccontext:go_default_library",
        "//lib/logger:go_default_library",
        "//lib/progress:go_default_library",
        "//lib/srand:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
    ],
)
