load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "astore_test",
    srcs = [
        "e2e_test.go",
        "server_test.go",
    ],
    data = glob(["testdata/**"]),
    tags = [
        # This test spins up emulated Datastore and therefore probably shouldn't
        # run on Buildbarn.
        "manual",
        "no-remote",
        # TODO(INFRA-1233): This test can't run in the dev container until we
        # install its dependencies (Datastore emulator)
        "no-cloudbuild",
    ],
    deps = [
        "//astore/atesting",
        "//astore/client/astore",
        "//astore/rpc/astore:go_default_library",
        "//astore/server/astore",
        "//lib/client/ccontext",
        "//lib/logger",
        "//lib/progress",
        "//lib/srand",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//test/bufconn",
    ],
)
