load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/bb_reporter",
    visibility = ["//visibility:private"],
    deps = [
        "//bb_reporter/reporter:go_default_library",
        "//lib/metrics:go_default_library",
        "//lib/server:go_default_library",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/completedactionlogger",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bb_reporter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "bb_reporter_tar",
    srcs = [":bb_reporter"],
    package_dir = "/enfabrica/bin",
)

container_image(
    name = "bb_reporter_image",
    base = "@golang_base//image",
    cmd = [
        "/enfabrica/bin/bb_reporter",
    ],
    tars = [
        ":bb_reporter_tar",
    ],
)

container_push(
    name = "bb_reporter_image_push",
    format = "Docker",
    image = ":bb_reporter_image",
    registry = "gcr.io",
    repository = "devops-284019/infra/services/bb_reporter",
    tag = "testing",
)
