load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "bb_reporter_lib",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/bb_reporter",
    visibility = ["//visibility:private"],
    deps = [
        "//bb_reporter/reporter",
        "//lib/metrics",
        "//lib/server",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/completedactionlogger",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bb_reporter",
    embed = [":bb_reporter_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "bb_reporter_tar",
    srcs = [":bb_reporter"],
    package_dir = "/enfabrica/bin",
)

oci_image(
    name = "bb_reporter_image",
    base = "@container_golang_base",
    entrypoint = [
        "/enfabrica/bin/bb_reporter",
    ],
    tars = [
        ":bb_reporter_tar",
    ],
)

oci_push(
    name = "bb_reporter_image_push",
    image = ":bb_reporter_image",
    remote_tags = ["latest"],
    repository = "gcr.io/devops-284019/infra/services/bb_reporter",
)
