load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//bazel/utils/container:container.bzl", "container_image", "container_push")

go_library(
    name = "bb_reporter_lib",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/bb_reporter",
    visibility = ["//visibility:private"],
    deps = [
        "//bb_reporter/reporter",
        "//lib/metrics",
        "//lib/server",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/completedactionlogger",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "bb_reporter",
    embed = [":bb_reporter_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "bb_reporter_tar",
    srcs = [":bb_reporter"],
    package_dir = "/enfabrica/bin",
)

container_image(
    name = "bb_reporter_image",
    base = "@container_golang_base",
    entrypoint = [
        "/enfabrica/bin/bb_reporter",
    ],
    tars = [
        ":bb_reporter_tar",
    ],
)

container_push(
    name = "bb_reporter_image_push",
    image = ":bb_reporter_image",
    image_path = "services/bb_reporter",
    namespace = "infra",
    remote_tags = ["latest"],
)
