load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/bes_publisher",
    visibility = ["//visibility:private"],
    deps = [
        "//bes_publisher/buildevent:go_default_library",
        "//lib/server:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_google_cloud_go_pubsub//:go_default_library",
        "@go_googleapis//google/devtools/build/v1:build_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bes_publisher",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
