load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bes_publisher_lib",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/bes_publisher",
    visibility = ["//visibility:private"],
    deps = [
        "//bes_publisher/buildevent",
        "//lib/metrics",
        "//lib/server",
        "@com_github_golang_glog//:glog",
        "@com_google_cloud_go_pubsub//:pubsub",
        "@go_googleapis//google/devtools/build/v1:build_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bes_publisher",
    embed = [":bes_publisher_lib"],
    visibility = ["//visibility:public"],
)
