load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bes_publisher_lib",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/bes_publisher",
    visibility = ["//visibility:private"],
    deps = [
        "//bes_publisher/buildevent",
        "//lib/metrics",
        "//lib/server",
        "@com_github_golang_glog//:glog",
        "@com_google_cloud_go_pubsub//:pubsub",
        "@org_golang_google_genproto//googleapis/devtools/build/v1:build",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "bes_publisher",
    embed = [":bes_publisher_lib"],
    visibility = ["//visibility:public"],
)
