load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/build_nark",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/logger:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_googlecloudplatform_cloud_build_notifiers//lib/notifiers:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@go_googleapis//google/devtools/cloudbuild/v1:cloudbuild_go_proto",
        "@in_gopkg_gomail_v2//:go_default_library",
    ],
)

go_binary(
    name = "build_nark",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_googlecloudplatform_cloud_build_notifiers//lib/notifiers:go_default_library",
        "@go_googleapis//google/devtools/cloudbuild/v1:cloudbuild_go_proto",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
