load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "build_nark_lib",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/build_nark",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/logger",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_googlecloudplatform_cloud_build_notifiers//lib/notifiers",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_google_cloud_go_cloudbuild//apiv1/v2/cloudbuildpb",
        "@in_gopkg_gomail_v2//:gomail_v2",
    ],
)

go_binary(
    name = "build_nark",
    embed = [":build_nark_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "build_nark_test",
    srcs = ["main_test.go"],
    embed = [":build_nark_lib"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_googlecloudplatform_cloud_build_notifiers//lib/notifiers",
        "@com_google_cloud_go_cloudbuild//apiv1/v2/cloudbuildpb",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
