load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["e2e.go"],
    importpath = "github.com/enfabrica/enkit/e2e",
    visibility = ["//visibility:public"],
    deps = [
        "//astore/rpc:astore-go",
        "//astore/server/astore:go_default_library",
        "//lib/srand:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
    ],
)
