load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["plugins.go"],
    importpath = "github.com/enfabrica/enkit/enauth",
    visibility = ["//visibility:public"],
    deps = [
        "//enauth/plugins:go_default_library",
        "//lib/kcerts:go_default_library",
        "//lib/oauth:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
