load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel/astore:defs.bzl", "astore_upload")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/enfabrica/enkit/enkit",
    visibility = ["//visibility:private"],
    deps = ["//enkit/cmd:go_default_library"],
)

go_binary(
    name = "enkit",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "enkit-linux-amd64",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    # Force cgo DNS resolver to be used, which is required in certain
    # environments (those using NIS to resolve addresses, for one). Also disable
    # `static`, since this causes segfaults when forcing cgo to be enabled.
    pure = "off",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "enkit-darwin-amd64",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "darwin",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "enkit-win-amd64",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "windows",
    static = "on",
    visibility = ["//visibility:public"],
)

astore_upload(
    name = "deploy",
    file = "tools/enkit",
    targets = [
        ":enkit-linux-amd64",
        ":enkit-darwin-amd64",
        ":enkit-win-amd64",
    ],
)
